Fix sonar issues for Admin and classes related to the content package, mails and other stuffs Fix the mixed domain group synchronization by taking into account the synchronization rule can be null. The fact that nothing is done is now reificated into an Optional value instead of null.